<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pilot_black"
    android:orientation="vertical">

    <include layout="@layout/pilot_status_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/preview_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/gps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/pilot_chip_background"
            android:drawableStart="@drawable/ic_gps"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/gps_waiting"
            android:textColor="@color/pilot_text_primary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="16dp"
            android:background="@drawable/pilot_chip_background"
            android:fontFamily="monospace"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="00:00:00"
            android:textColor="@color/pilot_text_primary"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="182dp"
            android:background="@drawable/pilot_chip_background"
            android:maxWidth="350dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/preview_initializing"
            android:textColor="@color/pilot_text_primary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="bottom"
            android:background="@drawable/preview_bottom_gradient"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label"
                android:textColor="@color/pilot_text_primary"
                android:textSize="21sp"
                android:textStyle="bold"
                android:shadowColor="#DD000000"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="3" />

            <View
                android:layout_width="70dp"
                android:layout_height="4dp"
                android:layout_marginTop="5dp"
                android:background="@color/pilot_text_primary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:layout_marginTop="2dp">

                <ImageButton
                    android:id="@+id/gallery_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="26dp"
                    android:background="@drawable/pilot_bottom_icon_background"
                    android:contentDescription="Gallery"
                    android:padding="11dp"
                    android:src="@drawable/ic_gallery" />

                <ImageButton
                    android:id="@+id/record_button"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/record_button_idle"
                    android:contentDescription="@string/start_recording"
                    android:enabled="false" />

                <ImageButton
                    android:id="@+id/settings_button"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="26dp"
                    android:background="@drawable/pilot_bottom_icon_background"
                    android:contentDescription="@string/open_settings"
                    android:padding="10dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/record_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/record_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-8dp"
                    android:text="@string/start_recording"
                    android:textColor="@color/pilot_text_primary"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/destination_button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:maxWidth="350dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:background="@drawable/pilot_chip_background"
                android:drawableStart="@drawable/ic_storage"
                android:drawablePadding="6dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/destination_internal"
                android:textColor="@color/pilot_text_primary"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/path_text"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
